Section on PCA input scales and clusters revised

--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -1,6 +1,7 @@
 %--------------------------------
 %--------------------------------
 \chapter{Implementierungsdetails}
+\label{chapter_implementation_detail}
 
 %---------------------------
 \section{Programmiersprache}
@@ -125,6 +126,7 @@ Jedes Element im Skelett speichert, relativ zu seinem Elternelement, die Positio
 
 %------------
 \section{PCA}
+\label{section_pca}
 %- - - - - - - - - - - - - - - - -
 \subsection{Annotation der Bilder}
 
